--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,34 +15,38 @@ pipeline {
             input {
                 message "Please insert cauntries separated by comma:"
                 ok "start"
-                submitter "alice,bob"
+                submitter ""
                 parameters {
                     string(name: 'COUNTRIES', defaultValue: 'israel,canada', description: 'press start to continue' )
                 }
             }
             steps {
                 script{
-                    // if (COUNTRIES.isEmpty()) {
-                    //     println 'list is empthy'
-                    // }else{
-                        println "the list of countries is : ${COUNTRIES}"
-                        def counties_names = COUNTRIES.tokenize(",")
-                        COUNTRIES_LIST = COUNTRIES.tokenize(",")
-                    // }
-                    
+                    println "the list of countries is : ${COUNTRIES}"
+                    def counties_names = COUNTRIES.tokenize(",")
+                    COUNTRIES_LIST = COUNTRIES.tokenize(",")
+                }
+            }
+        }
+        stage('Run'){
+            steps{
+                script{
+                    withEnv(['JENKINS_NODE_COOKIE=dontkill']) {
+                        sh 'nohup python Covid-19-flask.py &'
+                    }
                 }
             }
         }
         stage('Test'){
             steps{
                 script{
-                    withEnv(['JENKINS_NODE_COOKIE=dontkill']) {
-                        sh 'nohup python Covid-19-flask.py &'
-                        COUNTRIES_LIST.each { name ->
-                            sh "curl -s 'http://127.0.0.1:5000/newCasesPeak/?country=${name}'"
-                            sh "curl -s 'http://127.0.0.1:5000/deathsPeak/?country=${name}'"
-                            sh "curl -s 'http://127.0.0.1:5000/recoveredPeak/?country=${name}'"
-                        }
+                    def response = sh(script: "curl -s 'http://127.0.0.1:5000/status/'", returnStdout: true)
+                    sh "echo ${response}"
+                    assert response =~ /(.*)success(.*)/
+                    COUNTRIES_LIST.each { name ->
+                        sh "curl -s 'http://127.0.0.1:5000/newCasesPeak/?country=${name}'"
+                        sh "curl -s 'http://127.0.0.1:5000/deathsPeak/?country=${name}'"
+                        sh "curl -s 'http://127.0.0.1:5000/recoveredPeak/?country=${name}'"
                     }
                 }
             }
